@@ -1,3 +1,7 @@
+2014-02-15  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Resolves #56001: Language packs not re-applied by update script of Static Info Tables
+
 2014-02-13  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Resolves #55952: Wrong phone code for Liechtenstein in static_countries table
